package com.heslington_hustle.game;

public class Eat extends Activity {
    public Eat() {
        super();
        type = ActivityType.EAT;
        TimeUse = 1;
        Energy = 10;
    }
}
