package com.heslington_hustle.game;

public class Recreation extends Activity{
    public Recreation() {
        super();
        type = ActivityType.RECREATION;
        TimeUse = 2;
        Energy = 20;
    }
}
