package com.heslington_hustle.game;

public class Sleep extends Activity{
    public Sleep() {
        super();
        type = ActivityType.SLEEP;
        TimeUse = 16;
        Energy = 0;
    }
}
