package com.heslington_hustle.game;

public class Study extends Activity{
    public Study () {
        super();
        type = ActivityType.STUDY;
        TimeUse = 4;
        Energy = 50;
    }
}
